--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HR</title>
+    <script async src="https://docs.opencv.org/4.x/opencv.js"></script>
   </head>
 
   <body>
