--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HR</title>
+    <title>Lunovian HRMS</title>
     <script async src="https://docs.opencv.org/4.x/opencv.js"></script>
   </head>
 
