--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/lunovian_Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lunovian HRMS</title>
     <script async src="https://docs.opencv.org/4.x/opencv.js"></script>
